--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Artifical Intiligence"
+title                    : "personal page"
 description              : "Master's degree in Electronic Information, specializing in Robot SLAM and Multi-Sensor Fusion."
 repository               : "szy.github.io"
 google_scholar_stats_use_cdn : true
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Zhongyan Sun"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "Artifical Intiligence College"
+  bio              : "Nankai University, Artifical Intiligence College"
   location         : "Tianjin, China"
   employer         :
   pubmed           : 
