--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "personal page"
 description              : "Master's degree in Electronic Information, specializing in Robot SLAM and Multi-Sensor Fusion."
-repository               : "zhongyansun.github.io"
+repository               : "szy.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
