--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,19 +4,19 @@ main:
     url: "/#szy.github.io/about-me"
 
   - title: "Works"
-    url: "/#-works"
+    url: "/#szy.github.io/-works"
 
   - title: "Publications"
-    url: "/#-publications"
+    url: "/#szy.github.io/-publications"
 
   - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+    url: "/#szy.github.io/-honors-and-awards"
 
   - title: "Educations"
-    url: "/#-educations"
+    url: "/#szy.github.io/-educations"
 
   - title: "Invited Talks"
     url: "/#-invited-talks"
 
   - title: "Internships"
-    url: "/#-internships"
+    url: "/#szy.github.io/-internships"
