--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Zhongyan Sun"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "Nankai University, Artifical Intiligence College"
+  bio              : "Nankai University, Artificial Intelligence College"
   location         : "Tianjin, China"
   employer         :
   pubmed           : 
