--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,22 @@
 # main links links
 main:
   - title: "About Me"
-    url: "/#szy.github.io/about-me"
+    url: "/#about-me"
 
   - title: "Works"
-    url: "/#szy.github.io/-works"
+    url: "/#-works"
 
   - title: "Publications"
-    url: "/#szy.github.io/-publications"
+    url: "/#-publications"
 
   - title: "Honors and Awards"
-    url: "/#szy.github.io/-honors-and-awards"
+    url: "/#-honors-and-awards"
 
   - title: "Educations"
-    url: "/#szy.github.io/-educations"
+    url: "/#-educations"
 
   - title: "Invited Talks"
     url: "/#-invited-talks"
 
   - title: "Internships"
-    url: "/#szy.github.io/-internships"
+    url: "/#-internships"
