--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
-  - title: "Works"
-    url: "/#-works"
+  - title: "Projects"
+    url: "/#-projects"
 
   - title: "Publications"
     url: "/#-publications"
@@ -14,9 +14,6 @@ main:
 
   - title: "Educations"
     url: "/#-educations"
-
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
 
   - title: "Internships"
     url: "/#-internships"
